tests/NormalTests/paczka2/big_fuzzy/20364525.err
Error in line 6: 3s1FYl A353 13,37
Error in line 16: lzbyJ2xg A916 2,6
Error in line 35: 3s[FYl A690 72,8
Error in line 33: huWMJSR7tB A916 5,8
Error in line 12: 8MxFEs8p9l A353 1937,9
Error in line 40: 3s1FYl A916 72,4
Error in line 51: tAfb1Bk A916 27,9
Error in line 48: huWMJSR7tB A353 80,7
Error in line 42: 8MxFEs8p9l A690 99,8
Error in line 50: A690 A353 72,3
Error in line 57: lzbyJ2xg A916 37,8
Error in line 68: tAfb1Bk A916 59,9
Error in line 73: huWMJSR7tB A193 361,6
Error in line 84: huWMJSR7tB A353 89,8
Error in line 85: tAfb1Bk A916 33,2
Error in line 69: A690 A193 99,3
Error in line 103: fMY A916 94,1
Error in line 111: huWMJSR7tB A690 63,3
Error in line 115: fMY A690 98,1
Error in line 131: lzbyJ2xg A193 70,7
Error in line 132: lzbyJ2xg A690 90,1
Error in line 107: 8MxFEs8p9l A353 54,8
Error in line 127: tAfb1Bk A916 8,9
Error in line 141: huWMJSR7tB A690 77,0
Error in line 151: A690 A193 7,7
Error in line 133: lzbyJ2xg A193 66,7
Error in line 159: tAfb1Bk A690 59,1
Error in line 158: lzbyJ2xg A916 16,0
Error in line 167: huWMJSR7tB A916 28,3
Error in line 165: lzbyJ2xg A690 40,9
Error in line 175: lzbyJ2xg A193 14,1
Error in line 172: fMY A916 43,1
Error in line 180: lzbyJ2xg A353 314,06
Error in line 177: lzbyJ2xg A353 98,3
Error in line 183: 3s1FYl A353 10,1
Error in line 197: fMY A690 97,3
Error in line 209: tAfb1Bk A193 9,4
Error in line 210: fMY A353 94,3
Error in line 216: tAfb1Bk A690 164,2
Error in line 239: tAfb1Bk A690 46,41
Error in line 202: lzbyJ2xg A916 138,2
Error in line 233: tAfb1Bk A353 92,2
